--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react-app": "^3.1.2",
+    "json-server": "^0.14.0",
     "parcel-bundler": "^1.9.7"
   }
 }
